--- a/app/src/main/res/layout/fragment_send_money.xml
+++ b/app/src/main/res/layout/fragment_send_money.xml
@@ -197,7 +197,7 @@
     </LinearLayout>
 
     <RelativeLayout
-        android:id="@+id/buttonverde1"
+        android:id="@+id/botonverdeenviar"
         android:layout_width="314dp"
         android:layout_height="49dp"
         android:layout_marginBottom="16dp"
