--- a/app/src/main/res/layout/fragment_login_page.xml
+++ b/app/src/main/res/layout/fragment_login_page.xml
@@ -99,6 +99,7 @@
         android:background="@drawable/boton_redondeado"
         android:fontFamily="@font/jua_normal"
         android:text="Login"
+        android:textAllCaps="false"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toTopOf="@+id/textcrearnuevacuenta"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
@@ -152,19 +153,19 @@
 
     <TextView
         android:id="@+id/olvidastetucontra"
-        android:layout_width="161dp"
-        android:layout_height="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/jua_normal"
         android:lineHeight="17.5dp"
         android:text="@string/olvidaste_tu_contrase_a"
         android:textColor="@color/azulalkeosc"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/guideline8"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.788"
         app:layout_constraintStart_toStartOf="@+id/guideline9"
         app:layout_constraintTop_toBottomOf="@+id/imagerectanglepng2"
-        app:layout_constraintVertical_bias="0.04000002" />
+        app:layout_constraintVertical_bias="0.039" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline8"
