--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,27 +8,49 @@
         android:id="@+id/splash"
         android:name="com.example.alkewalletapp.fragmentos.Splash"
         android:label="fragment_splash"
-        tools:layout="@layout/fragment_splash" />
+        tools:layout="@layout/fragment_splash" >
+        <action
+            android:id="@+id/action_splash_to_loginsignup"
+            app:destination="@id/loginsignup" />
+    </fragment>
     <fragment
         android:id="@+id/loginsignup"
         android:name="com.example.alkewalletapp.fragmentos.Loginsignup"
         android:label="fragment_loginsignup"
-        tools:layout="@layout/fragment_loginsignup" />
-    <fragment
-        android:id="@+id/loginPage"
-        android:name="com.example.alkewalletapp.fragmentos.LoginPage"
-        android:label="fragment_login_page"
-        tools:layout="@layout/fragment_login_page" />
+        tools:layout="@layout/fragment_loginsignup" >
+        <action
+            android:id="@+id/action_loginsignup_to_signupPage"
+            app:destination="@id/signupPage" />
+        <action
+            android:id="@+id/action_loginsignup_to_loginPage"
+            app:destination="@id/loginPage" />
+    </fragment>
     <fragment
         android:id="@+id/signupPage"
         android:name="com.example.alkewalletapp.fragmentos.SignupPage"
         android:label="fragment_signup_page"
-        tools:layout="@layout/fragment_signup_page" />
+        tools:layout="@layout/fragment_signup_page" >
+        <action
+            android:id="@+id/action_signupPage_to_loginPage"
+            app:destination="@id/loginPage"
+            app:enterAnim="@android:anim/slide_in_left"
+            app:exitAnim="@android:anim/slide_out_right" />
+        <action
+            android:id="@+id/action_signupPage_to_loginsignup"
+            app:destination="@id/loginsignup" />
+    </fragment>
     <fragment
         android:id="@+id/homePage"
         android:name="com.example.alkewalletapp.fragmentos.HomePage"
         android:label="fragment_home_page"
-        tools:layout="@layout/fragment_home_page" />
+        tools:layout="@layout/fragment_home_page" >
+        <action
+            android:id="@+id/action_homePage_to_sendMoney"
+            app:destination="@id/sendMoney" />
+        <action
+            android:id="@+id/action_homePage_to_requestMoney"
+            app:destination="@id/requestMoney" />
+    </fragment>
     <fragment
         android:id="@+id/homePageEmpty"
         android:name="com.example.alkewalletapp.fragmentos.HomePageEmpty"
@@ -38,15 +60,43 @@
         android:id="@+id/requestMoney"
         android:name="com.example.alkewalletapp.fragmentos.RequestMoney"
         android:label="fragment_request_money"
-        tools:layout="@layout/fragment_request_money" />
+        tools:layout="@layout/fragment_request_money" >
+        <action
+            android:id="@+id/action_requestMoney_to_homePage"
+            app:destination="@id/homePage" />
+        <action
+            android:id="@+id/action_requestMoney_to_loginsignup"
+            app:destination="@id/loginsignup" />
+    </fragment>
     <fragment
         android:id="@+id/sendMoney"
         android:name="com.example.alkewalletapp.fragmentos.SendMoney"
         android:label="fragment_send_money"
-        tools:layout="@layout/fragment_send_money" />
+        tools:layout="@layout/fragment_send_money" >
+        <action
+            android:id="@+id/action_sendMoney_to_loginsignup"
+            app:destination="@id/loginsignup" />
+        <action
+            android:id="@+id/action_sendMoney_to_homePage"
+            app:destination="@id/homePage" />
+    </fragment>
     <fragment
         android:id="@+id/profilePage2"
         android:name="com.example.alkewalletapp.fragmentos.ProfilePage"
         android:label="fragment_profile_page"
         tools:layout="@layout/fragment_profile_page" />
+    <fragment
+        android:id="@+id/loginPage"
+        android:name="com.example.alkewalletapp.fragmentos.LoginPage"
+        android:label="fragment_login_page"
+        tools:layout="@layout/fragment_login_page" >
+        <action
+            android:id="@+id/action_loginPage_to_signupPage"
+            app:destination="@id/signupPage" />
+        <action
+            android:id="@+id/action_loginPage_to_homePage"
+            app:destination="@id/homePage"
+            app:enterAnim="@android:anim/slide_in_left"
+            app:exitAnim="@android:anim/slide_out_right" />
+    </fragment>
 </navigation>
