--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="grisAlke">#A6AFBA</color>
     <color name="verdeAlke">#72DB31</color>
     <color name="grisAlkeclaro">#F3F4F5</color>
+    <color name="grisAlkeosc">#FF575E71</color>
+
 </resources>
 
 
