--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -11,4 +11,14 @@
     </style>
 
 
+    <style name="email">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#1A1A1A</item>
+    </style>
+
+    <style name="enter_your_">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#1A1A1A</item>
+    </style>
+
 </resources>
