--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Alkewalletapp" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Base.Theme.Alkewalletapp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/azulalke</item>
         <item name="colorSecondary">@color/azulalkeosc</item>
